# ALICE-Font

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
bindings/ue5/: AliceFont.h
bindings/unity/: AliceFont.cs
docs/: CJK_ATLAS_REDESIGN.md  CJK_DESIGN.md  CJK_KANA_SPEC.md  CJK_KANJI_SPEC.md  CJK_ROADMAP.md  IDS_DATA_SOURCES.md
src/: atlas.rs  bidi.rs  cjk.rs  composite.rs  ffi.rs  game.rs  glyph.rs  lib.rs  license.rs  ligature.rs  param.rs  prelude.rs  python.rs  shaper.rs  stroke.rs
src/cjk/: ids.rs  ids_db.rs  layout.rs  mod.rs  radicals.rs
src/glyph/: cjk_strokes.rs  digits.rs  dispatcher.rs  font_outlines_data.rs  font_render.rs  helpers.rs  hiragana.rs  kanji.rs  katakana.rs  lower.rs  mod.rs  noto_outlines_data.rs  noto_render.rs  punct.rs  upper.rs
tools/import-font/: Cargo.toml
tools/import-font/src/: main.rs
tools/import-noto/: Cargo.toml
tools/import-noto/src/: main.rs
tools/render-ref/: .gitignore  Cargo.toml
tools/render-ref/src/: main.rs
