[package]
name = "alice-font"
version = "0.1.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
description = "Parametric metafont renderer — 40-byte parameters → infinite-resolution SDF glyphs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ext-sakamoro/ALICE-Font"
keywords = ["font", "sdf", "parametric", "typography", "no_std"]
categories = ["no-std", "rendering", "graphics"]

[features]
default = []
std = []
ffi = []
pyo3 = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.22", optional = true, features = ["extension-module"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
